Overflow fix what-we-do and fact section

--- a/assets/style.css
+++ b/assets/style.css
@@ -579,7 +579,7 @@ footer .hashtag {
     line-height: 4vw;
   }
   #action p {
-    font-size: 2.8vw;
+    font-size: 2vw;
   }
   .action-content {
     padding: 0;
@@ -984,10 +984,13 @@ footer .hashtag {
     margin-bottom: 10%;
     font-size: 100%;
   }
+  .what-we-do_cont tree {
+    grid-area: 2/1/3/2;
+  }
   .what-we-do_card {
     position: relative;
     display: block;
-    width: 13rem;
+    width: 22%;
     padding: 0 3%;
   }
   .what-we-do_card > * {
@@ -1023,6 +1026,7 @@ footer .hashtag {
     background-image: url("./home/did-you-know-background@3x.png");
     background-size: cover;
     background-position-y: 50%;
+    height: auto;
   }
   .fact_header {
     display: block;
@@ -1035,16 +1039,22 @@ footer .hashtag {
     line-height: 6vw;
     width: 70%;
   }
+  .fact_button {
+    font-size: 150%;
+    padding: 0.7rem 1.5rem;
+  }
   .fact_cont {
     align-self: center;
   }
   .fact_cont {
     margin: 10% 0;
     align-self: auto;
+    align-items: center;
+    grid-row-gap: 4vw;
   }
   .fact_card {
     grid-template-rows: 1fr 1fr;
-    height: 80%;
+    height: 13vw;
   }
   .fact_cont_head {
     left: 10%;
@@ -1059,6 +1069,12 @@ footer .hashtag {
   .fact_card p {
     align-self: start;
     font-size: 1.2vw;
+  }
+  .fact_twt {
+    width: 2vw;
+  }
+  .fact_fb {
+    width: 1vw;
   }
 
   /* STORIES */
